--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^5.23.0",
+    "@ant-design/icons": "^5.6.1",
+    "antd": "^5.24.2",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
